Correct spacing of card grid

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,11 +12,17 @@ page-home {
 	.card-grid{
 		display: flex;
 		flex-direction: column;
-		height: 85%;
+		height: 97%;
 	}
 
 
 	.suit-row{
+		flex: 1;
+		display: flex;
+		flex-direction: row;
+	}
+
+	.card-face-big-wrapper{
 		flex: 1;
 	}
 
@@ -60,7 +66,7 @@ page-home {
 	.cardIsntInDeck{
 
 		.card-background{
-			fill: $greyed-out-dark;
+			fill: $greyed-out-light;
 		}
 
 		.club-colour, .heart-colour, .spade-colour, .diamond-colour{
@@ -92,26 +98,51 @@ page-home {
 	/*  --- ODDS TEXT ---
 	========================*/
 
+	$odds-size: 2vw;
+
 	.suit-odds{
 
-		/* Safari */
-		-webkit-transform: rotate(90deg);
+		// /* Safari */
+		// -webkit-transform: rotate(90deg);
 
-		/* Firefox */
-		-moz-transform: rotate(90deg);
+		// /* Firefox */
+		// -moz-transform: rotate(90deg);
 
-		/* IE */
-		-ms-transform: rotate(90deg);
+		// /* IE */
+		// -ms-transform: rotate(90deg);
 
-		/* Opera */
-		-o-transform: rotate(90deg);
+		// /* Opera */
+		// -o-transform: rotate(90deg);
 
-		/* Internet Explorer */
-		filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+		// /* Internet Explorer */
+		// filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 
+		flex: 0 0 $odds-size;
+		max-width: $odds-size;
+		font-size: $odds-size;
+		text-align: center;
+		overflow: visible;
+		white-space: nowrap;
 
 	}
 
+	#rank-row{
+		flex: 0 0 $odds-size;
+		display: flex;
+		flex-direction: row;
+	}
+
+	.rank-odds{
+		flex: 1;
+		height: $odds-size;
+		font-size: $odds-size;
+		text-align: center;
+	}
+
+	#stats-button-container{
+		flex: 0 0 $odds-size;
+		height: $odds-size;
+	}
 
 
 }
